k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: order-cost-calculator
  labels:
    name: order-cost-calculator
    app: order-cost-calculator
